# fredonbytes-gemini-mcp

./: AGENTS.md  LICENCE  README.md  pyproject.toml
.github/: CHANGELOG.md  COPILOT_INSTRUCTIONS.md  GENERAL.md  TODO.md
scripts/: setup_test_env.py
src/gemini_copilot_mcp/: server.py
